--- a/Views/Home/AccessDenied.cshtml
+++ b/Views/Home/AccessDenied.cshtml
@@ -4,9 +4,13 @@
 <head>
     <link rel="stylesheet" href="~/css/ButtonsStyleSheet.css" asp-append-version="true" />
 </head>
-<h1>Access Denied</h1>
+<div id="container">
+<h1 id="header">Access Denied</h1>
 <p>Sorry, but you don't have the permissions to download this photo.</p>
+<p>Please contact the administrator for further assistance.</p>
 <button class="btn buttony btn-primary" onclick="goBack()">Go Back</button>
+</div>
+<img id="banned" src="~/images/icons/banned.png" />
 <script>
     function goBack() {
         history.back();
