--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -15,7 +15,7 @@
         <section>
             <form id="account" method="post">
                
-                <div id="zdj"> <img src="~/images/photo.png" width="135px" height="135px" /> <br />PhotoProject </div>
+                <div id="zdj" class="zdj"> <img src="~/images/photo.png" width="135px" height="135px" /> <br />PhotoProject </div>
                 <hr style="height:3px;"/>
                 @*<h2>Welcome back</h2>*@ 
 @*                <hr />*@
