--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,14 +13,15 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PhotoProject.styles.css" asp-append-version="true" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="~/css/NavBarStyleSheet.css" asp-append-version="true" />
 </head>
 <body>
     @if (SignInManager.IsSignedIn(User))
     {
         <header>
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom shadow mb-3">
-                <div class="container">
-                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/images/photo.png" width="50px" height="50px" style="margin-right:15px; margin-bottom:5px;"/>PhotoProject</a>
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom shadow mb-3" id="navbartlo">
+                
+                    <div id="logo"><a class="navbar-brand title2" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/images/photo.png" width="50px" height="50px" style="margin-right:15px; margin-bottom:5px;"/>PhotoProject</a></div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -28,33 +29,35 @@
                     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
 
                         <!-- POPRAWIĆ FORMATOWANIE LIST PHOTO I ALBUM - FRONT, PRZEDE WSZYSTKIM ABY STRONA NIE POKAZYWAŁA SIĘ PRZY LOGOWANIU  -->
-                        <ul class="navbar-nav d-flex flex-row me-2">
+                        <div id="lists">
+                        <ul class="navbar-nav d-flex flex-row me-2 ul u1">
                             <li class="nav-item dropdown align-content-center align-bottom">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="bi bi-gear"></i> PHOTO
+                                    <img src="~/images/album.png" width="30px" height="30px"/><i class="bi bi-gear"></i> PHOTO
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" asp-controller="Photo" asp-action="Index"><i></i>Show all</a>
-                                    <a class="dropdown-item" asp-controller="Photo" asp-action="Create"><i></i>Create new</a>
+                                    <a class="dropdown-item itemek" asp-controller="Photo" asp-action="Index"><i></i>Show all</a>
+                                    <a class="dropdown-item itemek" asp-controller="Photo" asp-action="Create"><i></i>Create new</a>
                                 </div>
                             </li>
                         </ul>
-                        <ul class="navbar-nav d-flex flex-row me-2">
+                        <ul class="navbar-nav d-flex flex-row me-2 ul u2">
                             <li class="nav-item dropdown align-content-center align-bottom">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="bi bi-gear"></i> ALBUM
+                                    <img src="~/images/icons/image2.png" width="30px" height="30px" /><i class="bi bi-gear"></i> ALBUM
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" asp-controller="Album" asp-action="Index"><i></i> Show all</a>
-                                    <a class="dropdown-item" asp-controller="Album" asp-action="Create"><i></i> Create new</a>
+                                    <a class="dropdown-item itemek" asp-controller="Album" asp-action="Index"><i></i> Show all</a>
+                                    <a class="dropdown-item itemek" asp-controller="Album" asp-action="Create"><i></i> Create new</a>
                                 </div>
                             </li>
                         </ul>
+                        </div>
                         <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                             <partial name="_LoginPartial.cshtml" />
                         </div>
                     </div>
-                </div>
+              
             </nav>
         </header>
     }
