--- a/wwwroot/css/NavBarStyleSheet.css
+++ b/wwwroot/css/NavBarStyleSheet.css
@@ -87,7 +87,6 @@
     background-size: 200% auto;
     color: white;
     border-radius: 10px;
-    display: inline-block;
     border: 0px;
     box-shadow: 0px 0px 14px -7px #f09819;
     background-image: linear-gradient(45deg, #009245, #FCEE21, #00A8C5, #D9E021);
@@ -97,6 +96,10 @@
     -webkit-user-select: none;
     touch-action: manipulation;
     margin-right: 25px;
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 0.5rem;
 }
 
     .setin:hover {
