--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,22 +1,21 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@*@using Microsoft.AspNetCore.Identity
 @using PhotoProject.Areas.Identity.Data
 
-@inject SignInManager<PhotoProjectUser> SignInManager
-@inject UserManager<PhotoProjectUser> UserManager
 
 <head>
     <link rel="stylesheet" href="~/css/NavBarStyleSheet.css" asp-append-version="true" />
 </head>
 <ul class="navbar-nav settings">
-    @if (SignInManager.IsSignedIn(User))
-    {
+    
+    
         <li class="nav-item setin">
-            <img src="~/images/icons/settings.png" width="30px" height="30px" /><a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Settings</a>
+            <img src="~/images/icons/settings.png" width="30px" height="30px" /><a id="manage" class="nav-link text-dark setin2" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Settings</a>
         </li>
         <li class="nav-item logout">
             <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                 <img src="~/images/icons/logout.png" width="30px" height="30px" /><button id="logout" type="submit" class="nav-link btn btn-link text-dark logoutbtn">Logout</button>
             </form>
         </li>
-    }
+    
 </ul>
+*@
